<resources>
    <string name="app_name">CurrencyConverter</string>
    <string name="sign_up">Sign up</string>
    <string name="currency_converter">Currency\nCalculator</string>
    <string name="dot">.</string>
    <string name="eur">EUR</string>
    <string name="pln">PLN</string>
    <string name="hint">input value here</string>
    <string name="convert">Convert</string>
    <string name="exchange_rate_txt"><u>Mid-market exchange rate at 13:38 UTC</u></string>
    <string name="past_30_days">Past 30 days</string>
    <string name="past_90_days">Past 90 days</string>
    <string name="get_rate_text"><u>Get rate alerts straight to your email inbox</u></string>
    <string name="eur_value">1</string>
    <string name="graph_text">15 Jun\n1 EUR = 4.242</string>
    <string name="convert_hint">0000</string>
</resources>