<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:overScrollMode="never"
    android:scrollbars="none"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currency_converter"
                android:textColor="@color/blue"
                android:textSize="45sp"
                app:fontFamily="@font/roboto_medium" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/dot"
            android:textColor="@color/btn_color"
            android:textSize="50sp"
            app:fontFamily="@font/roboto_medium"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
            app:layout_constraintStart_toEndOf="@+id/linearLayout" />

        <androidx.cardview.widget.CardView
            android:id="@+id/eur_card"
            style="@style/Base.Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="16dp"
            android:clickable="true"
            android:focusable="true"
            app:cardBackgroundColor="#fafafa"
            app:cardCornerRadius="6dp"
            app:cardElevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/appCompatTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="16dp"
                    android:background="?selectableItemBackground"
                    android:gravity="center"
                    android:text="@string/eur"
                    android:textColor="#d7d7d7"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/edit_text_bg"
                    android:hint="@string/hint"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/pln_card"
            style="@style/Base.Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:clickable="true"
            android:focusable="true"
            app:cardBackgroundColor="#fafafa"
            app:cardCornerRadius="6dp"
            app:cardElevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/eur_card">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="16dp"
                    android:background="?selectableItemBackground"
                    android:gravity="center"
                    android:text="@string/pln"
                    android:textColor="#d7d7d7"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:paddingTop="16dp"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="4.123243" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/pln_card"
            app:layout_constraintStart_toStartOf="@+id/pln_card"
            app:layout_constraintTop_toBottomOf="@+id/pln_card">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <FrameLayout
                    android:id="@+id/eur_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:background="@drawable/spinner_bg"
                    android:padding="9dp"
                    android:clickable="true"
                    android:focusable="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/appCompatImageView"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/eur"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/eur_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="10dp"
                            android:layout_marginEnd="145dp"
                            android:text="@string/eur"
                            android:textColor="?android:textColorPrimary"
                            android:textSize="16sp"
                            app:layout_constraintBottom_toBottomOf="@+id/appCompatImageView"
                            app:layout_constraintEnd_toStartOf="@+id/appCompatImageView2"
                            app:layout_constraintStart_toEndOf="@+id/appCompatImageView"
                            app:layout_constraintTop_toTopOf="@+id/appCompatImageView" />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/appCompatImageView2"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginTop="3dp"
                            android:src="@drawable/dropdown"
                            app:layout_constraintBottom_toBottomOf="@+id/eur_tv"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/eur_tv"
                            app:layout_constraintTop_toTopOf="@+id/eur_tv" />

                    </androidx.constraintlayout.widget.ConstraintLayout>


                </FrameLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>